# XOpenCV

./: .gitignore  LICENSE  README.md  build.gradle  config.gradle  settings.gradle
OpenCV320/: build.gradle
OpenCV320/src/main/java/org/opencv/core/: Core.java
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/foretree/xopencv/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/cutout/: CloverGrabCut.cpp  CloverGrabCut.h  CutoutImage.cpp  CutoutImagePacking.cpp  CutoutImagePacking.h  FaceCutOut.cpp  com_foretree_xopencv_DetectionBasedTracker.h
app/src/main/java/com/foretree/samples/: CutActivity.java  DensityUtil.java  FdActivity.java  GradCutActivity.java  MainActivity.java  PicUtils.java
app/src/main/java/com/foretree/xopencv/: CutActivity.java  DensityUtil.java  FdActivity.java  GradCutActivity.java  MainActivity.java  OpenCVJni.java  PicUtils.java
app/src/main/res/layout/: activity_cut.xml  activity_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/foretree/xopencv/: ExampleUnitTest.java
cv32-java/: bintray.gradle  build.gradle
cv32-java/src/main/: AndroidManifest.xml
cv32-native/: CMakeLists.txt  bintray.gradle  build.gradle
cv32-native/src/main/: AndroidManifest.xml
cv32-native/src/main/cpp/cutout/: CutoutImage.h  DetectionBasedTracker.cpp  com_foretree_xopencv_DetectionBasedTracker.h  com_foretree_xopencv_OpenCVJni.h
cv32-native/src/main/java/com/foretree/xopencv/: DetectionBasedTracker.java  OpenCVJni.java
cv32-native/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
